--- a/WestLake/res/drawable/radio_font_color.xml
+++ b/WestLake/res/drawable/radio_font_color.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<animation-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_focused="false" android:state_pressed="false" android:color="#010101" />  
-    <item android:state_pressed="true" android:color="#E87D2E" />  
-    <item android:state_focused="true"  android:color="#E87D2E" />  
-</animation-list>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:color="#E87D2E" android:state_checked="true" android:state_window_focused="false"/>
+    <item android:color="#010101" android:state_checked="false" android:state_window_focused="false"/>
+    <item android:color="#010101" android:state_checked="false"/>
+    <item android:color="#E87D2E" android:state_checked="true"/>
+</selector>
