--- a/WestLake/res/values/styles.xml
+++ b/WestLake/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light"></style>
+    <style name="AppBaseTheme" parent="android:Theme.Light"></style>
     <style name="AppTheme" parent="AppBaseTheme"></style>
     <style name="main_tab_bottom">
         <item name="android:textSize">@dimen/bottom_tab_font_size</item>
