--- a/WestLake/res/layout/oneactivity.xml
+++ b/WestLake/res/layout/oneactivity.xml
@@ -6,21 +6,39 @@
 
     <include layout="@layout/home_page_title" />
 
+    <HorizontalScrollView
+        android:id="@+id/horizontalscrollview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fadingEdge="@null"
+        android:scrollbars="none" >
+
+        <LinearLayout
+            android:id="@+id/linearlayout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal" >
+        </LinearLayout>
+    </HorizontalScrollView>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" >
 
-        <android.support.v4.view.PagerTabStrip
+       <!--  <android.support.v4.view.PagerTabStrip
             android:id="@+id/pagertab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top" />
+            android:layout_gravity="top" /> -->
     </android.support.v4.view.ViewPager>
-<!--注意事项:     
+    <!--
+    注意事项:     
     1.这里ViewPager和 PagerTabStrip都要把包名写全了，不然会ClassNotFount    
     2.API中说：在布局xml把PagerTabStrip当做ViewPager的一个子标签来用，不能拿出来，不然还是会报错    
     3.在PagerTabStrip标签中可以用属性android:layout_gravity=TOP|BOTTOM来指定title的位置    
-    4.如果要显示出PagerTabStrip某一页的title,需要在ViewPager的adapter中实现getPageTitle(int)-->  
+    4.如果要显示出PagerTabStrip某一页的title,需要在ViewPager的adapter中实现getPageTitle(int)
+    -->
+
 </LinearLayout>
