--- a/WestLake/res/layout/home_page_cultureactive.xml
+++ b/WestLake/res/layout/home_page_cultureactive.xml
@@ -3,14 +3,6 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
-     <TextView
-        android:id="@+id/textView"
-        android:layout_width="fill_parent"
-        android:layout_height="45dip"
-        android:gravity="center"
-        android:text="@string/honmepage"
-        android:textSize="20sp"
-        android:textColor="@color/black" >
-    </TextView>
+   <include layout="@layout/home_page_imge_viewpager" />
 
 </LinearLayout>
