--- a/WestLake/res/layout/home_page_activity.xml
+++ b/WestLake/res/layout/home_page_activity.xml
@@ -15,7 +15,7 @@
 
         <LinearLayout
             android:id="@+id/linearlayout"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:orientation="horizontal" >
         </LinearLayout>
