--- a/WestLake/res/layout/home_page_imge_viewpager.xml
+++ b/WestLake/res/layout/home_page_imge_viewpager.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="240dip"
     android:orientation="vertical" >
 
     <android.support.v4.view.ViewPager
@@ -24,7 +24,7 @@
             android:layout_gravity="center_vertical"
             android:clickable="true"
             android:padding="15dip"
-            android:src="@drawable/point_black" />
+            android:src="@drawable/point" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -32,7 +32,7 @@
             android:layout_gravity="center_vertical"
             android:clickable="true"
             android:padding="15dip"
-            android:src="@drawable/point_black" />
+            android:src="@drawable/point" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
             android:layout_gravity="center_vertical"
             android:clickable="true"
             android:padding="15dip"
-            android:src="@drawable/point_black" />
+            android:src="@drawable/point" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -48,7 +48,7 @@
             android:layout_gravity="center_vertical"
             android:clickable="true"
             android:padding="15dip"
-            android:src="@drawable/point_black" />
+            android:src="@drawable/point" />
     </LinearLayout>
 
 </RelativeLayout>
