--- a/WestLake/res/layout/list_item.xml
+++ b/WestLake/res/layout/list_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:background="@color/black" >
 
     <ImageView
         android:id="@+id/imageView_item"
