--- a/WestLake/res/layout/list_item.xml
+++ b/WestLake/res/layout/list_item.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:textColor="#FFFFFF"
+        android:text="测试数据"
         />
 
 </LinearLayout>
