--- a/WestLake/res/layout/home_page_cultureexhibition.xml
+++ b/WestLake/res/layout/home_page_cultureexhibition.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
-     <TextView
-        android:id="@+id/textView"
-        android:layout_width="fill_parent"
-        android:layout_height="45dip"
-        android:gravity="center"
-        android:text="@string/search"
-        android:textSize="20sp"
-        android:textColor="@color/black" >
-    </TextView>
+
+    <com.zg.westlake.pullrefresh.RefreshableView
+        android:id="@+id/exhibitionlistview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:cacheColorHint="#00000000"
+        android:divider="#ccd5d8"
+        android:dividerHeight="1dp"
+        android:fadingEdge="none"
+        android:scrollbars="none" >
+    </com.zg.westlake.pullrefresh.RefreshableView>
 
 </LinearLayout>
