--- a/WestLake/res/layout/home_page_title.xml
+++ b/WestLake/res/layout/home_page_title.xml
@@ -9,6 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="45dip"
         android:gravity="center"
+        android:layout_gravity="center_vertical"
         android:text="@string/honmepage"
         android:textSize="20sp"
         android:textColor="@color/black" >
